--- a/src/main/resources/opt/ltpost/fxml/PostLabelsSign.fxml
+++ b/src/main/resources/opt/ltpost/fxml/PostLabelsSign.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -53,7 +56,6 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </VBox>
-            <Separator opacity="0.5" prefWidth="200.0" />
             <VBox spacing="5.0">
                <children>
                   <HBox spacing="10.0" VBox.vgrow="ALWAYS">
@@ -112,7 +114,7 @@
                         <VBox>
                            <children>
                               <Label styleClass="label-bright" text="Date:" />
-                              <DatePicker />
+                              <DatePicker fx:id="DPicker_DateSigned" />
                            </children>
                         </VBox>
                         <VBox HBox.hgrow="ALWAYS">
@@ -142,48 +144,75 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </VBox>
-            <VBox VBox.vgrow="ALWAYS">
-               <children>
-                  <Label styleClass="label-bright" text="Micro Adjustment:" />
-                  <HBox>
-                     <children>
-                        <VBox>
+            <Accordion>
+              <panes>
+                <TitledPane animated="false" text="Micro Adjustments">
+                  <content>
+                    <AnchorPane>
                            <children>
-                              <Label styleClass="label-bright" text="location(x):" />
-                              <TextField editable="false" />
+                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <HBox>
+                                       <opaqueInsets>
+                                          <Insets />
+                                       </opaqueInsets>
+                                       <padding>
+                                          <Insets bottom="10.0" />
+                                       </padding>
+                                    </HBox>
+                                    <HBox>
+                                       <children>
+                                          <VBox HBox.hgrow="ALWAYS">
+                                             <children>
+                                                <VBox>
+                                                   <children>
+                                                      <Label styleClass="label-bright" text="location (x):" />
+                                                      <Slider fx:id="Slider_StampPointX" />
+                                                   </children>
+                                                </VBox>
+                                                <VBox>
+                                                   <children>
+                                                      <Label styleClass="label-bright" text="location (y):" />
+                                                      <Slider fx:id="Slider_StampPointY" />
+                                                   </children>
+                                                </VBox>
+                                                <VBox>
+                                                   <children>
+                                                      <Label styleClass="label-bright" text="width:" />
+                                                      <Slider fx:id="Slider_StampWidth" />
+                                                   </children>
+                                                </VBox>
+                                             </children>
+                                          </VBox>
+                                          <VBox HBox.hgrow="ALWAYS">
+                                             <children>
+                                                <VBox>
+                                                   <children>
+                                                      <Label styleClass="label-bright" text="signature height:" />
+                                                      <Slider fx:id="Slider_SignatureHeight" />
+                                                   </children>
+                                                </VBox>
+                                                <VBox>
+                                                   <children>
+                                                      <Label styleClass="label-bright" text="date font size:" />
+                                                      <Slider fx:id="Slider_DateSize" />
+                                                   </children>
+                                                </VBox>
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </VBox>
                            </children>
-                        </VBox>
-                        <VBox>
-                           <children>
-                              <Label styleClass="label-bright" text="location (y):" />
-                              <TextField editable="false" />
-                           </children>
-                        </VBox>
-                        <VBox>
-                           <children>
-                              <Label styleClass="label-bright" text="width:" />
-                              <TextField editable="false" />
-                           </children>
-                        </VBox>
-                        <VBox>
-                           <children>
-                              <Label styleClass="label-bright" text="signature height:" />
-                              <TextField editable="false" />
-                           </children>
-                        </VBox>
-                        <VBox>
-                           <children>
-                              <Label styleClass="label-bright" text="date font size:" />
-                              <TextField editable="false" />
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </children>
-               <padding>
-                  <Insets left="10.0" right="10.0" />
-               </padding>
-            </VBox>
+                        </AnchorPane>
+                  </content>
+                </TitledPane>
+              </panes>
+            </Accordion>
             <BorderPane>
                <padding>
                   <Insets left="10.0" right="10.0" top="30.0" />
