--- a/src/main/resources/opt/ltpost/fxml/PostLabelsSign.fxml
+++ b/src/main/resources/opt/ltpost/fxml/PostLabelsSign.fxml
@@ -13,14 +13,15 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="500.0" minWidth="800.0" stylesheets="@../css/modena.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="opt.ltpost.controllers.PostLabelsSignController">
+<AnchorPane minHeight="500.0" minWidth="600.0" stylesheets="@../css/modena.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="opt.ltpost.controllers.PostLabelsSignController">
    <children>
       <VBox layoutX="20.0" layoutY="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER_RIGHT">
                <children>
-                  <Label styleClass="label-header" text="Data Setup">
+                  <Label styleClass="label-header" text="Post Labels Manipulation">
                      <HBox.margin>
                         <Insets left="10.0" right="10.0" />
                      </HBox.margin>
@@ -79,6 +80,15 @@
                         <Insets bottom="10.0" />
                      </padding>
                   </HBox>
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </VBox>
+            <Separator opacity="0.5" prefWidth="200.0" />
+            <VBox alignment="TOP_CENTER" prefHeight="80.0">
+               <children>
+                  <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onClickSignDocument" text="Click to create new signed Document" VBox.vgrow="ALWAYS" />
                </children>
                <padding>
                   <Insets left="10.0" right="10.0" />
@@ -160,42 +170,111 @@
                                           <Insets bottom="10.0" />
                                        </padding>
                                     </HBox>
-                                    <HBox>
+                                    <HBox spacing="10.0">
                                        <children>
                                           <VBox HBox.hgrow="ALWAYS">
                                              <children>
                                                 <VBox>
                                                    <children>
-                                                      <Label styleClass="label-bright" text="location (x):" />
-                                                      <Slider fx:id="Slider_StampPointX" />
+                                                      <HBox>
+                                                         <children>
+                                                            <Label styleClass="label-bright" text="position x" />
+                                                            <Label fx:id="Label_StampPointX" text="(50)">
+                                                               <HBox.margin>
+                                                                  <Insets />
+                                                               </HBox.margin>
+                                                               <font>
+                                                                  <Font name="Comic Sans MS" size="12.0" />
+                                                               </font>
+                                                               <padding>
+                                                                  <Insets left="10.0" />
+                                                               </padding>
+                                                            </Label>
+                                                         </children>
+                                                      </HBox>
+                                                      <Separator maxWidth="100.0" prefWidth="50.0" />
+                                                      <Slider fx:id="Slider_StampPointX" showTickLabels="true" showTickMarks="true" />
                                                    </children>
                                                 </VBox>
                                                 <VBox>
                                                    <children>
-                                                      <Label styleClass="label-bright" text="location (y):" />
-                                                      <Slider fx:id="Slider_StampPointY" />
+                                                      <HBox>
+                                                         <children>
+                                                            <Label styleClass="label-bright" text="position y" />
+                                                            <Label fx:id="Label_StampPointY" text="(50)">
+                                                               <font>
+                                                                  <Font name="Comic Sans MS" size="12.0" />
+                                                               </font>
+                                                               <padding>
+                                                                  <Insets left="10.0" />
+                                                               </padding>
+                                                            </Label>
+                                                         </children>
+                                                      </HBox>
+                                                      <Separator maxWidth="100.0" prefWidth="50.0" />
+                                                      <Slider fx:id="Slider_StampPointY" showTickLabels="true" showTickMarks="true" />
                                                    </children>
                                                 </VBox>
                                                 <VBox>
                                                    <children>
-                                                      <Label styleClass="label-bright" text="width:" />
-                                                      <Slider fx:id="Slider_StampWidth" />
+                                                      <HBox>
+                                                         <children>
+                                                            <Label styleClass="label-bright" text="width" />
+                                                            <Label fx:id="Label_StampWidth" text="(50)">
+                                                               <font>
+                                                                  <Font name="Comic Sans MS" size="12.0" />
+                                                               </font>
+                                                               <padding>
+                                                                  <Insets left="10.0" />
+                                                               </padding>
+                                                            </Label>
+                                                         </children>
+                                                      </HBox>
+                                                      <Separator maxWidth="100.0" prefWidth="50.0" />
+                                                      <Slider fx:id="Slider_StampWidth" showTickLabels="true" showTickMarks="true" />
                                                    </children>
                                                 </VBox>
                                              </children>
                                           </VBox>
+                                          <Separator disable="true" orientation="VERTICAL" prefWidth="5.0" />
                                           <VBox HBox.hgrow="ALWAYS">
                                              <children>
                                                 <VBox>
                                                    <children>
-                                                      <Label styleClass="label-bright" text="signature height:" />
-                                                      <Slider fx:id="Slider_StampSignatureHeight" />
+                                                      <HBox>
+                                                         <children>
+                                                            <Label styleClass="label-bright" text="signature height" />
+                                                            <Label fx:id="Label_StampSignatureHeight" text="(50)">
+                                                               <font>
+                                                                  <Font name="Comic Sans MS" size="12.0" />
+                                                               </font>
+                                                               <padding>
+                                                                  <Insets left="10.0" />
+                                                               </padding>
+                                                            </Label>
+                                                         </children>
+                                                      </HBox>
+                                                      <Separator maxWidth="140.0" prefWidth="50.0" />
+                                                      <Slider fx:id="Slider_StampSignatureHeight" showTickLabels="true" showTickMarks="true" />
                                                    </children>
                                                 </VBox>
                                                 <VBox>
                                                    <children>
-                                                      <Label styleClass="label-bright" text="date font size:" />
-                                                      <Slider fx:id="Slider_StampDateSize" />
+                                                      <HBox>
+                                                         <children>
+                                                            <Label styleClass="label-bright" text="date font size" />
+                                                            <Label fx:id="Label_StampDateSize" text="(50)">
+                                                               <font>
+                                                                  <Font name="Comic Sans MS" size="12.0" />
+                                                               </font>
+                                                               <padding>
+                                                                  <Insets left="10.0" />
+                                                               </padding>
+                                                            </Label>
+                                                         </children>
+                                                      </HBox>
+                                                      <Separator maxWidth="140.0" prefWidth="50.0" />
+                                                      <Slider fx:id="Slider_StampDateSize" showTickLabels="true" showTickMarks="true" />
                                                    </children>
                                                 </VBox>
                                              </children>
